--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,6 +51,41 @@ input[type='text'] {
   padding: 5px;
 }
 
-button {
 
+// ツイート
+
+
+.tweets{
+  display: flex;
+  flex-direction: column;
+}
+.tweet{
+  width: 100%;
+  height:100px;
+  border: 1px solid #ccc;
+  border-radius: 5px; 
+  display: flex;
+  align-items: center;
+}
+
+.tweet .image{
+  flex: 1;
+}
+
+.tweet .body{
+  flex: 4;
+}
+.tweet p {
+  word-break : break-all;
+}
+
+.tweet .footer{
+  position: absolute;
+}
+.tweet .footer ul{
+  display: flex;
+}
+
+.tweet .footer li {
+  padding: 0 20px;
 }
