--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("tweets/tweets", { greeting: "Hello from react-rails." }) %>
+<%= react_component("tweets/tweets", { tweets: @tweets }) %>
