--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -116,3 +116,16 @@ ul.side-links{
     }
   }
 }
+
+// 絵文字
+
+.disabled{
+  display: none;
+}
+
+.emoji-mart.emoji-mart-light{
+  position: absolute;
+  right: 170px;
+  top: 115px;
+  z-index: 10;
+}
