--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,9 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+ul {
+  margin: 0;
+}
 
 // リセットcss
 
@@ -60,8 +63,8 @@ input[type='text'] {
   flex-direction: column;
 }
 .tweet{
+  padding: 5px 0;
   width: 100%;
-  height:100px;
   border: 1px solid #ccc;
   border-radius: 5px; 
   display: flex;
@@ -79,14 +82,12 @@ input[type='text'] {
   word-break : break-all;
 }
 
-.tweet .footer{
-  position: absolute;
-}
-.tweet .footer ul{
-  display: flex;
+.tweet  ul{
+
 }
 
-.tweet .footer li {
+.tweet li {
+  display: inline-block;
   padding: 0 20px;
 }
 
