--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,17 @@ ul {
   margin: 0;
 }
 
+// ヘッダー
+
+#header-title.fixed{
+  position: fixed;
+  top: 0;
+  background-color: white;
+  width: 100%;
+  z-index: 10;
+}
+
+
 .form-header{
   display: flex;
   align-items: center;
